fuzzers/binary_only/frida_crash_repro/fuzzer_output_5.txt
   Compiling frida_crash_repro v0.16.0 (/usr/local/google/home/dmnk/tmp/LibAFL/fuzzers/binary_only/frida_crash_repro)
   Compiling libafl_bolts v0.16.0 (/usr/local/google/home/dmnk/tmp/LibAFL/crates/libafl_bolts)
error[E0425]: cannot find value `len` in this scope
   --> /usr/local/google/home/dmnk/tmp/LibAFL/crates/libafl_bolts/src/staterestore.rs:142:79
    |
142 |                 write!(cursor, "DEBUG: content_ptr: 0x{:x}, len: {}\n", addr, len).ok();
    |                                                                               ^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `libafl_bolts` (lib) due to 1 previous error
